k8s/recosys-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recosys-ingress
  namespace: recosys
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: recosys-deployment-service
                port:
                  number: 9000
